Add styles and responsive design

--- a/src/stylesheets/index.scss
+++ b/src/stylesheets/index.scss
@@ -348,6 +348,11 @@ template {
 [hidden] {
   display: none;
 }
+
+ul, ol{
+  margin: 0;
+  padding: 0;
+}
 *{
   box-sizing: border-box;
   list-style: none;
