--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
-  background-color: #282c34
+  background-color: #282c34;
+  min-width: 100%;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -29,7 +31,18 @@
 }
 
 .header{
+  width: 100%;
   padding: 20px;
+  &__logo{
+    width: 100%;
+    @media all and (min-width: 768px){
+      width: 600px;
+      height: 200px;
+    }
+  }
+  @media all and (min-width: 768px) {
+    margin: auto;
+  }
 }
 
 .main{
@@ -37,14 +50,14 @@
 }
 
 .container-list{
-  margin: 10px;
   display: flex;
   flex-flow: row wrap;
+  justify-content: center;
 }
 
 .container-item{
   padding: 10px;
-  margin:20px;
+  margin:15px;
   background-color: rgb(73, 9, 14);
   border-radius: 10px;
   color: white;
@@ -63,19 +76,75 @@
   }
 }
 .filters{
+  @media all and (min-width: 768px){
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   padding: 10px;
+  }
 }
 
 .form-search{
-  width: 50%;
+  width: 70%;
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
+  padding: 5px;
+  margin: auto;
   color: white;
+  @media all and (min-width: 768px){
+  width: 60%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  margin: 0;
+  }
+}
+.form-select{
+  margin-top: 5px;
 }
 
+.card__container{
+  margin: auto;
+  width: 50%;
+  background-color: #49090e;
+  border: 3px solid rgb(243, 30, 30);
+  border-radius: 5px;
+  @media all and (min-width: 768px) {
+    width: 50%;   
+    padding: 10px;
+    // margin: auto;
+    display: flex;
+  }
+}
+.card__container-detail{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 15px;
+  background-color: rgb(243, 30, 30);
+  color: white;
+  font-size: 20px;
+  @media all and (min-width: 768px) {
+    justify-content: center;
+    font-size: 20px;
+  }
+  @media all and (min-width: 1200px) {
+    font-size: 25px;
+  }
+}
+
+.card__container-img{
+  width: 65%;
+  height: 65%;
+  border: 2px solid rgb(243, 30, 30);
+  margin: 5px;
+  @media all and (min-width: 768px) {
+    width: 50%;
+    height: 50%;
+    margin: 0;
+    border: 3px solid rgb(243, 30, 30);
+  }
+}
 
 @keyframes App-logo-spin {
   from {
