--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  background-color: #282c34;
+  background-image: linear-gradient(to bottom, #1a0912, #322537, #3f4461, #3b678a, #288ea9, #00a3b2, #00b6b1, #25c9a7, #2ecd90, #4acf74, #6ad051, #8bcf21);
   min-width: 100%;
   min-height: 100vh;
 }
@@ -75,14 +75,6 @@
     border: 1px solid rgb(70, 68, 68);
   }
 }
-.filters{
-  @media all and (min-width: 768px){
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding: 10px;
-  }
-}
 
 .form-search{
   width: 70%;
@@ -92,15 +84,23 @@
   margin: auto;
   color: white;
   @media all and (min-width: 768px){
-  width: 60%;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  margin: 0;
   }
 }
-.form-select{
-  margin-top: 5px;
+.label{
+  padding: 10px;
+  font-size: 18px;
+  @media all and (min-width: 768px){
+    padding: 0;
+    font-size: 20px;
+  }
+}
+.input-search{
+  @media all and (min-width: 768px){
+    width: 50%;
+  }
 }
 
 .card__container{
@@ -126,7 +126,7 @@
   font-size: 20px;
   @media all and (min-width: 768px) {
     justify-content: center;
-    font-size: 20px;
+    font-size: 17px;
   }
   @media all and (min-width: 1200px) {
     font-size: 25px;
@@ -138,12 +138,17 @@
   height: 65%;
   border: 2px solid rgb(243, 30, 30);
   margin: 5px;
+  display: flex;
+  flex-direction: row;
   @media all and (min-width: 768px) {
     width: 50%;
     height: 50%;
     margin: 0;
     border: 3px solid rgb(243, 30, 30);
   }
+}
+.link-back{
+  font-size: 20px;
 }
 
 @keyframes App-logo-spin {
