--- a/src/stylesheets/App.scss
+++ b/src/stylesheets/App.scss
@@ -1,161 +1,16 @@
-.App {
-  text-align: center;
-  background-image: linear-gradient(to bottom, #1a0912, #322537, #3f4461, #3b678a, #288ea9, #00a3b2, #00b6b1, #25c9a7, #2ecd90, #4acf74, #6ad051, #8bcf21);
-  min-width: 100%;
-  min-height: 100vh;
-}
+//Vendors
+@import 'vendors/normalize.scss';
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+// //Core
+// @import 'core/variables';
+// @import 'core/function';
+// @import 'core/mixins';
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+//Layout
+@import 'layout/base';
+@import 'layout/header';
+@import 'layout/filter';
+@import 'layout/characterList';
+@import 'layout/characterItem';
+@import 'layout/characterDetail';
 
-.App-header {
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-.header{
-  width: 100%;
-  padding: 20px;
-  &__logo{
-    width: 100%;
-    @media all and (min-width: 768px){
-      width: 600px;
-      height: 200px;
-    }
-  }
-  @media all and (min-width: 768px) {
-    margin: auto;
-  }
-}
-
-.main{
-  background-color: rgb(209, 25, 40);
-}
-
-.container-list{
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-}
-
-.container-item{
-  padding: 10px;
-  margin:15px;
-  background-color: rgb(73, 9, 14);
-  border-radius: 10px;
-  color: white;
-  width: 200px;
-  height: 300px;
-  &:hover{
-    background-color: rgb(243, 30, 30);
-    border: 2px solid black;
-  }
-}
-
-.img{
-  width: 100%;
-  &:hover{
-    border: 1px solid rgb(70, 68, 68);
-  }
-}
-
-.form-search{
-  width: 70%;
-  display: flex;
-  flex-direction: column;
-  padding: 5px;
-  margin: auto;
-  color: white;
-  @media all and (min-width: 768px){
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  }
-}
-.label{
-  padding: 10px;
-  font-size: 18px;
-  @media all and (min-width: 768px){
-    padding: 0;
-    font-size: 20px;
-  }
-}
-.input-search{
-  @media all and (min-width: 768px){
-    width: 50%;
-  }
-}
-
-.card__container{
-  margin: auto;
-  width: 50%;
-  background-color: #49090e;
-  border: 3px solid rgb(243, 30, 30);
-  border-radius: 5px;
-  @media all and (min-width: 768px) {
-    width: 50%;   
-    padding: 10px;
-    // margin: auto;
-    display: flex;
-  }
-}
-.card__container-detail{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 15px;
-  background-color: rgb(243, 30, 30);
-  color: white;
-  font-size: 20px;
-  @media all and (min-width: 768px) {
-    justify-content: center;
-    font-size: 17px;
-  }
-  @media all and (min-width: 1200px) {
-    font-size: 25px;
-  }
-}
-
-.card__container-img{
-  width: 65%;
-  height: 65%;
-  border: 2px solid rgb(243, 30, 30);
-  margin: 5px;
-  display: flex;
-  flex-direction: row;
-  @media all and (min-width: 768px) {
-    width: 50%;
-    height: 50%;
-    margin: 0;
-    border: 3px solid rgb(243, 30, 30);
-  }
-}
-.link-back{
-  font-size: 20px;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
